Iptables-Firehol/iptables.rules
# Generated by iptables-save v1.8.2 on Tue Apr 16 04:59:37 2019
*mangle
:PREROUTING ACCEPT [34:1812]
:INPUT ACCEPT [34:1812]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [34:1924]
:POSTROUTING ACCEPT [34:1924]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0x1fff --ctmask 0x1fff
-A INPUT -m conntrack --ctstate NEW -j CONNMARK --save-mark --nfmask 0x1fff --ctmask 0x1fff
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0x1fff --ctmask 0x1fff
-A POSTROUTING -m conntrack --ctstate NEW -j CONNMARK --save-mark --nfmask 0x1fff --ctmask 0x1fff
COMMIT
# Completed on Tue Apr 16 04:59:37 2019
# Generated by iptables-save v1.8.2 on Tue Apr 16 04:59:37 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:SMART_REJECT - [0:0]
:in_world - [0:0]
:out_world - [0:0]
:pr_world_ifl4 - [0:0]
:pr_world_mbd8 - [0:0]
:pr_world_mnl7 - [0:0]
:pr_world_mxs6 - [0:0]
:pr_world_nsn3 - [0:0]
:pr_world_sfl5 - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -j in_world
-A INPUT -p tcp -m tcp --tcp-flags FIN,ACK FIN,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags RST,ACK RST,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags ACK ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags RST RST -m conntrack --ctstate INVALID,NEW -j DROP
-A INPUT -p icmp -m icmp --icmp-type 3 -m conntrack --ctstate INVALID,NEW -j DROP
-A INPUT -m conntrack --ctstate INVALID -m limit --limit 1/sec -j LOG --log-prefix "DROP INVALID INPUT:"
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A INPUT -m limit --limit 1/sec -j LOG --log-prefix "DROP UNMATCHED IN-unknown:"
-A INPUT -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags FIN,ACK FIN,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags RST,ACK RST,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags ACK ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags RST RST -m conntrack --ctstate INVALID,NEW -j DROP
-A FORWARD -p icmp -m icmp --icmp-type 3 -m conntrack --ctstate INVALID,NEW -j DROP
-A FORWARD -m conntrack --ctstate INVALID -m limit --limit 1/sec -j LOG --log-prefix "DROP INVALID FORWARD:"
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A FORWARD -p tcp -m conntrack --ctstate RELATED -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG RST,ACK -j ACCEPT
-A FORWARD -m limit --limit 1/sec -j LOG --log-prefix "DROP UNMATCHED PASS-unknown:"
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -j out_world
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,ACK FIN,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A OUTPUT -p tcp -m tcp --tcp-flags RST,ACK RST,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A OUTPUT -p tcp -m tcp --tcp-flags ACK ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A OUTPUT -p tcp -m tcp --tcp-flags RST RST -m conntrack --ctstate INVALID,NEW -j DROP
-A OUTPUT -p icmp -m icmp --icmp-type 3 -m conntrack --ctstate INVALID,NEW -j DROP
-A OUTPUT -m conntrack --ctstate INVALID -m limit --limit 1/sec -j LOG --log-prefix "DROP INVALID OUTPUT:"
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A OUTPUT -p tcp -m conntrack --ctstate RELATED -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG RST,ACK -j ACCEPT
-A OUTPUT -m limit --limit 1/sec -j LOG --log-prefix "DROP UNMATCHED OUT-unknown:"
-A OUTPUT -j DROP
-A SMART_REJECT -p tcp -j REJECT --reject-with tcp-reset
-A SMART_REJECT -j REJECT --reject-with icmp-port-unreachable
-A in_world -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A in_world -p tcp -m conntrack --ctstate NEW -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -j pr_world_nsn3
-A in_world -p icmp -m icmp --icmp-type 8 -j pr_world_ifl4
-A in_world -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j pr_world_sfl5
-A in_world -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j pr_world_mxs6
-A in_world -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j pr_world_mnl7
-A in_world -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j pr_world_mbd8
-A in_world -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j pr_world_mbd8
-A in_world -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j pr_world_mbd8
-A in_world -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j pr_world_mbd8
-A in_world -p tcp -m tcp --sport 1024:65535 --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A in_world -p tcp -m tcp --sport 1024:65535 --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A in_world -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A in_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper ftp -j ACCEPT
-A in_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper irc -j ACCEPT
-A in_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper sip -j ACCEPT
-A in_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper pptp -j ACCEPT
-A in_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper proto_gre -j ACCEPT
-A in_world -p tcp -m tcp --tcp-flags FIN,ACK FIN,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A in_world -p tcp -m tcp --tcp-flags RST,ACK RST,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A in_world -p tcp -m tcp --tcp-flags ACK ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A in_world -p tcp -m tcp --tcp-flags RST RST -m conntrack --ctstate INVALID,NEW -j DROP
-A in_world -p icmp -m icmp --icmp-type 3 -m conntrack --ctstate INVALID,NEW -j DROP
-A in_world -m conntrack --ctstate INVALID -m limit --limit 1/sec -j LOG --log-prefix "DROP INVALID in_world:"
-A in_world -m conntrack --ctstate INVALID -j DROP
-A in_world -m limit --limit 1/sec -j LOG --log-prefix "reject UNMATCHED IN-world:"
-A in_world -j SMART_REJECT
-A out_world -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A out_world -p tcp -m conntrack --ctstate RELATED -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG RST,ACK -j ACCEPT
-A out_world -p tcp -m tcp --sport 443 --dport 1024:65535 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A out_world -p tcp -m tcp --sport 80 --dport 1024:65535 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A out_world -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A out_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper ftp -j ACCEPT
-A out_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper irc -j ACCEPT
-A out_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper sip -j ACCEPT
-A out_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper pptp -j ACCEPT
-A out_world -m conntrack --ctstate RELATED,ESTABLISHED -m helper --helper proto_gre -j ACCEPT
-A out_world -p tcp -m tcp --tcp-flags FIN,ACK FIN,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A out_world -p tcp -m tcp --tcp-flags RST,ACK RST,ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A out_world -p tcp -m tcp --tcp-flags ACK ACK -m conntrack --ctstate INVALID,NEW -j DROP
-A out_world -p tcp -m tcp --tcp-flags RST RST -m conntrack --ctstate INVALID,NEW -j DROP
-A out_world -p icmp -m icmp --icmp-type 3 -m conntrack --ctstate INVALID,NEW -j DROP
-A out_world -m conntrack --ctstate INVALID -m limit --limit 1/sec -j LOG --log-prefix "DROP INVALID out_world:"
-A out_world -m conntrack --ctstate INVALID -j DROP
-A out_world -m limit --limit 1/sec -j LOG --log-prefix "reject UNMATCHED OUT-world:"
-A out_world -j SMART_REJECT
-A pr_world_ifl4 -m limit --limit 100/sec --limit-burst 50 -j RETURN
-A pr_world_ifl4 -m limit --limit 1/sec -j LOG --log-prefix "BLOCKED ICMP FLOOD:"
-A pr_world_ifl4 -j DROP
-A pr_world_mbd8 -m limit --limit 1/sec -j LOG --log-prefix "BLOCKED MALFORMED BAD:"
-A pr_world_mbd8 -j DROP
-A pr_world_mnl7 -m limit --limit 1/sec -j LOG --log-prefix "BLOCKED MALFORMED NULL:"
-A pr_world_mnl7 -j DROP
-A pr_world_mxs6 -m limit --limit 1/sec -j LOG --log-prefix "BLOCKED MALFORMED XMAS:"
-A pr_world_mxs6 -j DROP
-A pr_world_nsn3 -m limit --limit 1/sec -j LOG --log-prefix "BLOCKED NEW TCP w/o SYN:"
-A pr_world_nsn3 -j DROP
-A pr_world_sfl5 -m limit --limit 100/sec --limit-burst 50 -j RETURN
-A pr_world_sfl5 -m limit --limit 1/sec -j LOG --log-prefix "BLOCKED SYN FLOOD:"
-A pr_world_sfl5 -j DROP
COMMIT
# Completed on Tue Apr 16 04:59:37 2019
